@@ -1,3 +1,7 @@
+[0, 15, 56]: 2018-08-15
+  - fix issue with ``python -O`` optimizing away code (reported, and detailed cause
+    pinpointed, by `Alex Grönholm <https://bitbucket.org/agronholm/>`__
+
 [0, 15, 55]: 2018-08-14
 
   - unmade ``CommentedSeq`` a subclass of ``list``. It is now
